Revision history for Perl extension Monitoring::Availability.

0.07  Sun Jan 24 21:39:55 CET 2010
    - fixed report log for hosts with services
    - fixed test requirements

0.06  Sun Jan 24 00:29:06 CET 2010
    - fixed initial states 'current'

0.05  Thu Jan 21 22:05:16 CET 2010
    - fixed reports when logfiles are totally out of report range
    - changed the way of settings options
    - added new option services_inherit_hostdowntimes
    - added new option timeformat which is used for log output
    - moved logfile parsing to extra module
    - fixed initialassumedservicestate

0.04  Mon Jan 18 08:06:59 CET 2010
    - added message when passing wrong services

0.03  Sat Jan 16 20:46:54 CET 2010
    - added resulting datastructure
    - added read string/array/file/dir methods
    - first tests
    - implemented assumestatesduringnotrunning option
    - implemented service availability calculation
    - implemented hostdowntimes
    - implemented servicedowntimes
    - implemented hosts

0.01  Fri Jan 15 16:40:00 CET 2010
    - initial version