@@ -23,4 +23,4 @@ requires:
   perl: 5.6.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.07_2
+version: 0.07_3
